feat: add header

--- a/shelter/pages/main/scss/abstract/_constants.scss
+++ b/shelter/pages/main/scss/abstract/_constants.scss
@@ -2,7 +2,7 @@ $color-primary: #F1CDB3;
 $color-primary-light: #FDDCC4;
 
 // Light colors
-$color-title: #FAFAFA;
+$color-title-active: #FAFAFA;
 $color-bg-gray: #F6F6F6;
 $color-light: #FFFFFF;
 
@@ -13,3 +13,5 @@ $color-title: #545454;
 $color-text-light: #4C4C4C;
 $color-text-button: #292929;
 $color-text-modal: #000000;
+
+$desktop-width: 1280px;
