--- a/shelter/pages/main/scss/style.scss
+++ b/shelter/pages/main/scss/style.scss
@@ -2,6 +2,15 @@
 
 // Abstact
 @import "abstract/constants";
+@import "abstract/mixins";
+@import "abstract/placeholders";
 
 // Base
 @import "base/base"; 
+
+// Layout 
+@import "layout/wrapper";
+@import "layout/header";
+
+// Components
+@import "components/navigation";
