--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -308,6 +308,26 @@ template {
   display: none;
 }
 
+@font-face {
+  font-family: "Arial-regular";
+  src: url("../../../assets/fonts/arial/arial-regular.woff2") format("woff2"), url("../../../assets/fonts/arial/arial-regular.woff") format("woff");
+}
+@font-face {
+  font-family: "Arial-italic";
+  src: url("../../../assets/fonts/arial/arial-italic.woff2") format("woff2"), url("../../../assets/fonts/arial/arial-italic.woff") format("woff");
+}
+@font-face {
+  font-family: "Georgia-regular";
+  src: url("../../../assets/fonts/georgia/georgia-regular.woff2") format("woff2"), url("../../../assets/fonts/georgia/georgia-regular.woff") format("woff");
+}
+@font-face {
+  font-family: "Georgia-bold";
+  src: url("../../../assets/fonts/georgia/georgia-bold.woff2") format("woff2"), url("../../../assets/fonts/georgia/georgia-bold.woff") format("woff");
+}
+.navigation__link {
+  transition: all 0.3s ease-out;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -315,4 +335,96 @@ template {
 html {
   font-size: 10px;
   scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Georgia-regular";
+  font-size: 1.5rem;
+  line-height: 2.4rem;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1 {
+  font-size: 3.2rem;
+  line-height: 3.52rem;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.06em;
+  color: #F1CDB3;
+  margin: 0;
+}
+
+p {
+  font-family: "Arial-regular";
+}
+
+.wrapper {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+
+.header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 27px;
+  padding-bottom: 15px;
+}
+.header__logo {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  cursor: default;
+}
+
+.logo {
+  margin-top: 3px;
+}
+.logo__subtitle {
+  font-size: 1.3rem;
+  line-height: 1.495rem;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.1em;
+  color: #FFFFFF;
+  margin: 0;
+  margin-left: 3px;
+}
+
+.navigation {
+  font-family: "Arial-regular";
+  display: flex;
+  gap: 36px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-right: 1px;
+}
+.navigation__link {
+  text-decoration: none;
+  color: #CDCDCD;
+}
+@media (hover: hover) {
+  .navigation__link:hover {
+    color: #FAFAFA;
+  }
+}
+
+.-active {
+  position: relative;
+}
+.-active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: #F1CDB3;
+  bottom: -2px;
+  left: 0;
+}
+.-active .navigation__link {
+  color: #FAFAFA;
+  cursor: default;
 }/*# sourceMappingURL=style.css.map */
