--- a/shelter/pages/main/scss/base/_base.scss
+++ b/shelter/pages/main/scss/base/_base.scss
@@ -19,6 +19,12 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  @include font($size: 4.4rem, $height: 5.72rem);
+  margin: 0;
+}
+
 p {
   font-family: 'Arial-regular';
+  margin: 0;
 }
