--- a/shelter/pages/main/scss/base/_base.scss
+++ b/shelter/pages/main/scss/base/_base.scss
@@ -27,8 +27,15 @@ h2 {
 h3 {
   @include font($size: 3.5rem, $height: 4.55rem);
   color: $color-title;
-  margin: 0;
   letter-spacing: 0.06em;
+  margin: 0;
+}
+
+h4 {
+  @include font($size: 2.0rem, $height: 2.3rem);
+  color: $color-title;
+  letter-spacing: 0.06em;
+  margin: 0;
 }
 
 p {
