--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -369,8 +369,18 @@ h3 {
   font-weight: 400;
   font-style: normal;
   color: #545454;
-  margin: 0;
   letter-spacing: 0.06em;
+  margin: 0;
+}
+
+h4 {
+  font-size: 2rem;
+  line-height: 2.3rem;
+  font-weight: 400;
+  font-style: normal;
+  color: #545454;
+  letter-spacing: 0.06em;
+  margin: 0;
 }
 
 p {
@@ -488,9 +498,6 @@ p {
   padding: 16px 45px;
 }
 
-.about {
-  margin-bottom: 1000px;
-}
 .about__wrapper {
   padding-top: 80px;
 }
@@ -508,4 +515,32 @@ p {
 }
 .about__title {
   max-width: 350px;
+}
+
+.help__wrapper {
+  margin-top: 80px;
+  margin-bottom: 100px;
+}
+.help__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 60px;
+}
+.help__title {
+  text-align: center;
+  max-width: 310px;
+}
+.help__cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 55px 120px;
+}
+.help__card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }/*# sourceMappingURL=style.css.map */
