--- a/shelter/pages/main/scss/components/_help.scss
+++ b/shelter/pages/main/scss/components/_help.scss
@@ -1,7 +1,7 @@
 .help {
   &__wrapper {
-    margin-top: 80px;
-    margin-bottom: 100px;
+    padding-top: 80px;
+    padding-bottom: 100px;
   }
   &__content {
     display: flex;
