feat: add friends block

--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -324,7 +324,7 @@ template {
   font-family: "Georgia-bold";
   src: url("../../../assets/fonts/georgia/georgia-bold.woff2") format("woff2"), url("../../../assets/fonts/georgia/georgia-bold.woff") format("woff");
 }
-.navigation__link {
+.card__button, .card, .friends__btn, .friends__arrow, .navigation__link {
   transition: all 0.3s ease-out;
 }
 
@@ -500,6 +500,7 @@ p {
 
 .about__wrapper {
   padding-top: 80px;
+  padding-bottom: 100px;
 }
 .about__content {
   display: flex;
@@ -517,9 +518,112 @@ p {
   max-width: 350px;
 }
 
+.friends {
+  background-color: #F6F6F6;
+}
+.friends__wrapper {
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+.friends__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
+}
+.friends__title {
+  text-align: center;
+}
+.friends__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 53px;
+}
+.friends__arrow {
+  width: 52px;
+  height: 52px;
+  background-color: transparent;
+  background-image: url(./../../../assets/icons/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  padding: 23px 19px;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+  cursor: pointer;
+}
+@media (hover: hover) {
+  .friends__arrow:hover {
+    border: 2px solid #FDDCC4;
+    background-color: #FDDCC4;
+  }
+}
+.friends__arrow-next {
+  transform: rotate(0.5turn);
+}
+.friends__cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 90px;
+}
+.friends__btn {
+  font-size: 1.7rem;
+  line-height: 2.21rem;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.06em;
+  background-color: #F1CDB3;
+  text-decoration: none;
+  color: #292929;
+  border-radius: 100px;
+  padding: 15px 45px;
+}
+@media (hover: hover) {
+  .friends__btn:hover {
+    background-color: #FDDCC4;
+  }
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  background-color: #FAFAFA;
+  border-radius: 9px;
+  padding-bottom: 30px;
+  cursor: pointer;
+}
+@media (hover: hover) {
+  .card:hover {
+    background-color: #FFFFFF;
+    box-shadow: 0 2px 35px 14px rgba(13, 13, 13, 0.04);
+  }
+  .card:hover .card__button {
+    border: 2px solid #FDDCC4;
+    background-color: #FDDCC4;
+  }
+}
+.card__name {
+  line-height: 2.27rem;
+}
+.card__button {
+  font-size: 1.7rem;
+  line-height: 2.21rem;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.06em;
+  background-color: transparent;
+  color: #292929;
+  padding: 13px 43px;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+  cursor: pointer;
+}
+
 .help__wrapper {
-  margin-top: 80px;
-  margin-bottom: 100px;
+  padding-top: 80px;
+  padding-bottom: 100px;
 }
 .help__content {
   display: flex;
