--- a/shelter/pages/main/scss/style.scss
+++ b/shelter/pages/main/scss/style.scss
@@ -16,4 +16,5 @@
 @import "components/navigation";
 @import "components/not-only";
 @import "components/about";
+@import "components/friends";
 @import "components/help";
