--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -523,7 +523,7 @@ p {
 }
 .friends__wrapper {
   padding-top: 80px;
-  padding-bottom: 100px;
+  padding-bottom: 99px;
 }
 .friends__content {
   display: flex;
@@ -623,7 +623,7 @@ p {
 
 .help__wrapper {
   padding-top: 80px;
-  padding-bottom: 100px;
+  padding-bottom: 99px;
 }
 .help__content {
   display: flex;
@@ -647,4 +647,66 @@ p {
   flex-direction: column;
   align-items: center;
   gap: 30px;
+}
+
+.donation {
+  background-color: #F6F6F6;
+}
+.donation__wrapper {
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+.donation__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.donation__inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  max-width: 380px;
+}
+.donation__title {
+  max-width: 300px;
+}
+.donation__name-bank {
+  font-size: 1.5rem;
+  line-height: 1.65rem;
+  font-weight: 400;
+  font-style: normal;
+  letter-spacing: 0.06em;
+  color: #545454;
+}
+.donation__number {
+  max-width: 349px;
+  background-color: #F1CDB3;
+  border: none;
+  border-radius: 9px;
+  padding: 10px 14px 10px 60px;
+  cursor: pointer;
+  position: relative;
+}
+.donation__number::before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 23px;
+  background-image: url(./../../../assets/icons/credit-card.svg);
+  background-repeat: no-repeat;
+  left: 16px;
+  top: 9px;
+}
+.donation__number-link {
+  color: #545454;
+  text-decoration: none;
+}
+.donation__legal-info {
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  font-weight: 400;
+  font-style: italic;
+  color: #B2B2B2;
 }/*# sourceMappingURL=style.css.map */
