--- a/shelter/pages/main/scss/components/_not-only.scss
+++ b/shelter/pages/main/scss/components/_not-only.scss
@@ -33,5 +33,11 @@
     color: $color-text-button;
     border-radius: 100px;
     padding: 16px 45px;
+    @extend %transition;
+    @media (hover:hover) {
+      &:hover {
+        background-color: $color-primary-light;
+      }
+    }
   }
 } 
