--- a/shelter/pages/pets/scss/layout/_header.scss
+++ b/shelter/pages/pets/scss/layout/_header.scss
@@ -8,10 +8,13 @@
     padding-bottom: 28px;
   }
   &__logo {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    cursor: default;
+    &-link {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      text-decoration: none;
+      cursor: pointer;
+    }
   }
 }
 
