--- a/shelter/pages/main/scss/layout/_header.scss
+++ b/shelter/pages/main/scss/layout/_header.scss
@@ -7,10 +7,13 @@
     padding-bottom: 15px;
   }
   &__logo {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    cursor: default;
+    &-link {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      text-decoration: none;
+      cursor: default;
+    }
   }
 }
 
