feat: add selection on all pages

--- a/shelter/pages/main/scss/abstract/_constants.scss
+++ b/shelter/pages/main/scss/abstract/_constants.scss
@@ -14,4 +14,8 @@ $color-text-light: #4C4C4C;
 $color-text-button: #292929;
 $color-text-modal: #000000;
 
+// Сolors to highlight
+$color-selection-dark: #b18663;
+$color-selection-light: #fce3c6;
+
 $desktop-width: 1280px;
