--- a/shelter/pages/main/scss/abstract/_mixins.scss
+++ b/shelter/pages/main/scss/abstract/_mixins.scss
@@ -4,3 +4,11 @@
   font-weight: $weight;
   font-style: $style;
 }
+
+@mixin highlights-colors ($color) {
+  * {
+      &::selection{
+          background: $color;
+      }
+  }
+}
