--- a/shelter/pages/pets/scss/base/_base.scss
+++ b/shelter/pages/pets/scss/base/_base.scss
@@ -10,6 +10,7 @@ html {
 body {
   font-family: "Georgia-regular";
   @include font($size: 1.5rem, $height: 2.4rem);
+  @include highlights-colors($color: $color-selection-light);
 }
 
 h1 {
@@ -42,4 +43,8 @@ h4 {
 p {
   font-family: 'Arial-regular';
   margin: 0;
+}
+
+.footer {
+  @include highlights-colors($color: $color-selection-dark);
 }
