--- a/shelter/pages/pets/scss/base/_base.scss
+++ b/shelter/pages/pets/scss/base/_base.scss
@@ -7,6 +7,18 @@ html {
   scroll-behavior: smooth; 
 }
 
+html::-webkit-scrollbar {
+  width: 8px;
+}
+
+html::-webkit-scrollbar-track {
+  background: $color-light; 
+}
+
+html::-webkit-scrollbar-thumb {  
+  background: $color-primary;
+}
+
 body {
   font-family: "Georgia-regular";
   @include font($size: 1.5rem, $height: 2.4rem);
