--- a/shelter/pages/main/scss/components/_not-only.scss
+++ b/shelter/pages/main/scss/components/_not-only.scss
@@ -3,17 +3,31 @@
   &__wrapper {
     margin-top: -105px;
     padding-top: 180px;
+    @media (max-width: ($desktop-width - 150px)) {
+      padding-top: 150px;
+    }
   }
   &__content {
     display: flex;
     justify-content: space-between;
     gap: 42px;
+    @media (max-width: ($desktop-width - 150px)) {
+      flex-direction: column;
+      justify-content: center;
+      align-items: end;
+      gap: 99px;
+    }
   }
   &__inner {
     display: flex;
     flex-direction: column;
     gap: 42px;
     margin-top: 163px;    
+    @media (max-width: ($desktop-width - 150px)) {
+      gap: 41px;
+      padding: 0 124px;
+      margin-top: 0;    
+    }
   }
   &__title {
     max-width: 310px;
@@ -24,6 +38,11 @@
   }
   &__button {
     margin-top: 14px;
+    @media (max-width: ($desktop-width - 150px)) {
+      display: flex;
+      justify-content: center;
+      margin-top: 0;
+    }
   }
   &__link {
     @include font($size: 1.7rem, $height: 2.21rem);
@@ -38,6 +57,15 @@
       &:hover {
         background-color: $color-primary-light;
       }
+    }
+    @media (max-width: ($desktop-width - 150px)) {
+      padding: 16px 45px;
+    }
+  }
+  &__img {
+    @media (max-width: ($desktop-width - 150px)) {
+      width: clamp(569px, 46vw, 698px);
+      margin-left: 70px;
     }
   }
 } 
