--- a/shelter/pages/main/scss/layout/_wrapper.scss
+++ b/shelter/pages/main/scss/layout/_wrapper.scss
@@ -2,4 +2,7 @@
   max-width: $desktop-width;
   margin: 0 auto;
   padding: 0 40px;
+  @media (max-width: ($desktop-width - 150px)) {
+    padding: 0 30px;
+  }
 }
