--- a/shelter/pages/main/scss/components/_help.scss
+++ b/shelter/pages/main/scss/components/_help.scss
@@ -19,11 +19,25 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 55px 120px;
+    @media (max-width: ($desktop-width - 190px)) {
+      gap: 55px 65px;
+    }
+    @media (max-width: ($desktop-width - 410px)) {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 55px 65px;
+    }
   }
   &__card {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 30px;
+  }
+  &__name {
+    @media (max-width: ($desktop-width - 410px)) {
+      text-align: center;
+    }
+    
   }
 }
