--- a/shelter/pages/main/scss/components/_donation.scss
+++ b/shelter/pages/main/scss/components/_donation.scss
@@ -9,6 +9,15 @@
     justify-content: center;
     align-items: center;
     gap: 30px;
+    @media (max-width: ($desktop-width - 190px)) {
+      flex-direction: column;
+      gap: 60px;
+    }
+  }
+  &__img {
+    @media (max-width: ($desktop-width - 190px)) {
+      order: 2;
+    }
   }
   &__inner {
     display: flex;
@@ -16,6 +25,10 @@
     justify-content: space-between;
     gap: 20px;
     max-width: 380px;
+    @media (max-width: ($desktop-width - 190px)) {
+      max-width: clamp(380px, 49vw, 800px);
+      order: 1;
+    }
   }
   &__title {
     max-width: 300px;
