--- a/shelter/pages/main/scss/layout/_wrapper.scss
+++ b/shelter/pages/main/scss/layout/_wrapper.scss
@@ -5,4 +5,7 @@
   @media (max-width: ($desktop-width - 150px)) {
     padding: 0 30px;
   }
+  @media (max-width: ($table-width - 10px)) {
+    padding: 0 10px;
+  }
 }
