--- a/shelter/pages/main/scss/components/_not-only.scss
+++ b/shelter/pages/main/scss/components/_not-only.scss
@@ -17,6 +17,10 @@
       align-items: end;
       gap: 99px;
     }
+    @media (max-width: ($table-width - 10px)) {
+      align-items: center;
+      gap: 106px;
+    }
   }
   &__inner {
     display: flex;
@@ -28,13 +32,25 @@
       padding: 0 124px;
       margin-top: 0;    
     }
+    @media (max-width: ($table-width - 10px)) {
+      align-items: center;
+      padding: 0;
+    }
   }
   &__title {
     max-width: 310px;
     color: $color-light;
+    @media (max-width: ($table-width - 10px)) {
+      text-align: center;
+      max-width: clamp(200px, 45vw, 350px);
+    }
   }
   &__text {
     color: $color-text-dark;
+    @media (max-width: ($table-width - 10px)) {
+      max-width: clamp(300px, 68vw, 500px);
+      text-align: center;
+    }
   }
   &__button {
     margin-top: 14px;
@@ -66,6 +82,10 @@
     @media (max-width: ($desktop-width - 150px)) {
       width: clamp(569px, 46vw, 698px);
       margin-left: 70px;
+    }
+    @media (max-width: ($table-width - 10px)) {
+      width: clamp(260px, 75vw, 569px);
+      margin-left: 40px;
     }
   }
 } 
