--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -380,6 +380,15 @@ h2 {
   font-style: normal;
   margin: 0;
 }
+@media (max-width: 758px) {
+  h2 {
+    font-size: clamp(2.5rem, 5vw + 0.5rem, 4.4rem);
+    line-height: clamp(3.2rem, 5vw + 1.5rem, 5.7rem);
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.06em;
+  }
+}
 
 h3 {
   font-size: 3.5rem;
@@ -665,6 +674,12 @@ p {
     gap: 99px;
   }
 }
+@media (max-width: 758px) {
+  .not-only__content {
+    align-items: center;
+    gap: 106px;
+  }
+}
 .not-only__inner {
   display: flex;
   flex-direction: column;
@@ -678,12 +693,30 @@ p {
     margin-top: 0;
   }
 }
+@media (max-width: 758px) {
+  .not-only__inner {
+    align-items: center;
+    padding: 0;
+  }
+}
 .not-only__title {
   max-width: 310px;
   color: #FFFFFF;
 }
+@media (max-width: 758px) {
+  .not-only__title {
+    text-align: center;
+    max-width: clamp(200px, 45vw, 350px);
+  }
+}
 .not-only__text {
   color: #CDCDCD;
+}
+@media (max-width: 758px) {
+  .not-only__text {
+    max-width: clamp(300px, 68vw, 500px);
+    text-align: center;
+  }
 }
 .not-only__button {
   margin-top: 14px;
@@ -721,6 +754,12 @@ p {
   .not-only__img {
     width: clamp(569px, 46vw, 698px);
     margin-left: 70px;
+  }
+}
+@media (max-width: 758px) {
+  .not-only__img {
+    width: clamp(260px, 75vw, 569px);
+    margin-left: 40px;
   }
 }
 
