--- a/shelter/pages/main/scss/components/_about.scss
+++ b/shelter/pages/main/scss/components/_about.scss
@@ -2,6 +2,10 @@
   &__wrapper {
     padding-top: 80px;
     padding-bottom: 100px;
+    @media (max-width: ($table-width - 10px)) {
+      padding-top: 42px;
+      padding-bottom: 42px;
+    }
   }
   &__content {
     display: flex;
@@ -12,10 +16,16 @@
       align-items: center;
       gap: 79px;
     }
+    @media (max-width: ($table-width - 10px)) {
+      gap: 40px;
+    }
   }
   &__img {
     @media (max-width: ($desktop-width - 150px)) {
       order: 2;
+    }
+    @media (max-width: ($table-width - 10px)) {
+      width: clamp(260px, 2vw, 300px);
     }
   }
   &__inner {
@@ -29,8 +39,22 @@
       gap: 25px;
       order: 1;
     }
+    @media (max-width: ($table-width - 10px)) {
+      align-items: center;
+      gap: 24px;
+    }
   }
   &__title {
     max-width: 350px;
+    @media (max-width: ($table-width - 10px)) {
+      max-width: clamp(230px, 47vw, 350px);
+      text-align: center;
+    }
+  }
+  &__text {
+    @media (max-width: ($table-width - 10px)) {
+      padding: 0 15px;
+      text-align: justify;
+    }
   }
 }
