--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -851,11 +851,22 @@ p {
   padding-top: 80px;
   padding-bottom: 99px;
 }
+@media (max-width: 728px) {
+  .friends__wrapper {
+    padding-top: 42px;
+    padding-bottom: 42px;
+  }
+}
 .friends__content {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 60px;
+}
+@media (max-width: 728px) {
+  .friends__content {
+    gap: 42px;
+  }
 }
 .friends__title {
   text-align: center;
@@ -869,6 +880,13 @@ p {
 @media (max-width: 1270px) {
   .friends__inner {
     gap: 12px;
+  }
+}
+@media (max-width: 728px) {
+  .friends__inner {
+    display: grid;
+    grid-template-columns: repeat(2, 135px);
+    gap: 20px 0;
   }
 }
 .friends__arrow {
@@ -889,8 +907,19 @@ p {
     background-color: #FDDCC4;
   }
 }
+@media (max-width: 728px) {
+  .friends__arrow-prev {
+    grid-row: 2/2;
+    margin-left: 43px;
+  }
+}
 .friends__arrow-next {
   transform: rotate(0.5turn);
+}
+@media (max-width: 728px) {
+  .friends__arrow-next {
+    margin-left: 40px;
+  }
 }
 .friends__cards {
   display: flex;
@@ -905,6 +934,7 @@ p {
 @media (max-width: 1110px) {
   .friends__cards {
     max-width: 580px;
+    grid-column: 1/3;
   }
 }
 .friends__btn {
@@ -947,6 +977,11 @@ p {
 }
 @media (max-width: 1110px) {
   .card:last-child {
+    display: none;
+  }
+}
+@media (max-width: 728px) {
+  .card:nth-child(2) {
     display: none;
   }
 }
