--- a/shelter/pages/main/scss/style.css
+++ b/shelter/pages/main/scss/style.css
@@ -417,6 +417,14 @@ h4 {
   letter-spacing: 0.06em;
   margin: 0;
 }
+@media (max-width: 758px) {
+  h4 {
+    font-size: clamp(1.5rem, 2.5vw + 0.3rem, 2rem);
+    line-height: clamp(1.6rem, 2.6vw + 0.3rem, 2.3rem);
+    font-weight: 400;
+    font-style: normal;
+  }
+}
 
 p {
   font-family: "Arial-regular";
@@ -1006,6 +1014,12 @@ p {
   padding-top: 80px;
   padding-bottom: 99px;
 }
+@media (max-width: 758px) {
+  .help__wrapper {
+    padding-top: 42px;
+    padding-bottom: 42px;
+  }
+}
 .help__content {
   display: flex;
   flex-direction: column;
@@ -1013,9 +1027,19 @@ p {
   align-items: center;
   gap: 60px;
 }
+@media (max-width: 758px) {
+  .help__content {
+    gap: 42px;
+  }
+}
 .help__title {
   text-align: center;
   max-width: 310px;
+}
+@media (max-width: 758px) {
+  .help__title {
+    max-width: clamp(222px, 41vw, 310px);
+  }
 }
 .help__cards {
   display: flex;
@@ -1032,7 +1056,17 @@ p {
   .help__cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 55px 65px;
+  }
+}
+@media (max-width: 758px) {
+  .help__cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 758px) {
+  .help__cards {
+    gap: clamp(31px, 8vw, 55px) clamp(35px, 9vw, 65px);
   }
 }
 .help__card {
@@ -1040,6 +1074,17 @@ p {
   flex-direction: column;
   align-items: center;
   gap: 30px;
+}
+@media (max-width: 758px) {
+  .help__card {
+    gap: 20px;
+  }
+}
+@media (max-width: 758px) {
+  .help__img {
+    width: clamp(50px, 8vw, 60px);
+    height: clamp(50px, 8vw, 60px);
+  }
 }
 @media (max-width: 870px) {
   .help__name {
