--- a/shelter/pages/pets/scss/style.css
+++ b/shelter/pages/pets/scss/style.css
@@ -473,6 +473,11 @@ p {
     padding-top: 30px;
   }
 }
+@media (max-width: 758px) {
+  .footer__wrapper {
+    padding-top: 28px;
+  }
+}
 .footer__content {
   display: grid;
   grid-template-columns: 280px 302px 300px;
@@ -483,6 +488,16 @@ p {
     grid-template-columns: repeat(2, 1fr);
     gap: 69px 37px;
     padding: 0px 34px;
+  }
+}
+@media (max-width: 758px) {
+  .footer__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 43px;
+    padding: 0;
   }
 }
 .footer__questions {
@@ -496,6 +511,12 @@ p {
     padding-top: 1px;
   }
 }
+@media (max-width: 758px) {
+  .footer__questions {
+    align-items: center;
+    gap: 45px;
+  }
+}
 .footer__title {
   color: #FFFFFF;
   padding-top: 2px;
@@ -505,6 +526,12 @@ p {
     padding-top: 0;
   }
 }
+@media (max-width: 758px) {
+  .footer__title {
+    text-align: center;
+    padding: 0 10px;
+  }
+}
 .footer__link {
   display: flex;
   align-items: center;
@@ -512,6 +539,15 @@ p {
   text-decoration: none;
   padding-left: 42px;
   position: relative;
+}
+@media (max-width: 758px) {
+  .footer__link {
+    font-size: 2rem;
+    line-height: 2.3rem;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.06em;
+  }
 }
 .footer__link-email {
   padding-left: 60px;
@@ -540,6 +576,16 @@ p {
   left: 0;
   top: 1px;
 }
+@media (max-width: 758px) {
+  .footer__link-telephone::before {
+    top: -1px;
+  }
+}
+@media (max-width: 758px) {
+  .footer__link-telephone {
+    padding-top: 4px;
+  }
+}
 .footer__link-location::before {
   content: "";
   position: absolute;
@@ -549,6 +595,12 @@ p {
   height: 32px;
   left: -1px;
   bottom: 8px;
+}
+@media (max-width: 758px) {
+  .footer__link-location::before {
+    left: 0px;
+    bottom: 7px;
+  }
 }
 .footer__link-london {
   padding-top: 5px;
@@ -571,10 +623,23 @@ p {
     padding-top: 1px;
   }
 }
+@media (max-width: 758px) {
+  .footer__visit {
+    gap: 40px;
+    max-width: 100%;
+  }
+}
 @media (max-width: 1260px) {
   .footer__img {
     margin: 0 auto;
     grid-column: 1/3;
+  }
+}
+@media (max-width: 758px) {
+  .footer__img {
+    width: clamp(260px, 44vw, 300px);
+    margin: 0;
+    padding-top: 1px;
   }
 }
 
